--- a/src/app/pages/contract/contract.component.scss
+++ b/src/app/pages/contract/contract.component.scss
@@ -41,4 +41,7 @@ input:focus , .dropdown-toggle:focus{
 .dropdown-menu a:hover{
     color: $mainColor;
 }
+.time , .duration{
+    font-size: 15px;
+}
 
