--- a/src/app/shell/navbar/navbar.component.html
+++ b/src/app/shell/navbar/navbar.component.html
@@ -1,72 +1,89 @@
-
-<nav class=" ">
-    <div class="">
-        <div class="img-nav">
-            <img src="../../../assets/images/logo.png" class="w-50 rounded-circle" alt="" style="width: 150px !important;">
-        </div>
-        <button class="navbar-toggler mt-3 ml-3" data-target="#my-nav" data-toggle="collapse"
-            aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon text-mainColor"> <i class="fas fa-bars fa-2x"></i> </span>
-        </button>
-
-        <div id="my-nav" class="collapse navbar-collapse">
-            <ul class="list-unstyled  mt-3">
-                <li class="nav-item ">
-                    <a class="nav-link mr-2 " [routerLinkActive]="['active']"
-                        [routerLink]="['home']">Home </a>
-
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link mr-2  " [routerLinkActive]="['active']"
-                        [routerLink]="['trackorder']" tabindex="-1" aria-disabled="true">Track Order</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link mr-2 " [routerLinkActive]="['active']"
-                        [routerLink]="['contactus']" tabindex="-1" aria-disabled="true">contact us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link mr-2 " [routerLinkActive]="['active']" [routerLink]="['login']"
-                        tabindex="-1" aria-disabled="true">Login</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link mr-2 " [routerLinkActive]="['active']" [routerLink]="['signup']"
-                        tabindex="-1" aria-disabled="true">Signup</a>
-                </li>
-
-                <li class="nav-item ">
-                    <a class="nav-link mr-2 " [routerLinkActive]="['active']"
-                        [routerLink]="['Contract']">Contract </a>
-                </li>
-            </ul>
-        </div>
-
-         
-    </div>
-</nav>
-
-   <!-- language spinner -->
-   <div class="setting-spinner d-flex justify-align-center">
-    <div class="setting bg-light  rounded">
-        <i (click)="showSpinnerSitting()" class="fas fa-cog fa-spin fa-2x text-mainColor "></i>
-    </div>
-    <div *ngIf="show" class=" bg-light border rounded px-3">
-        <!-----------------------------languages----------------------->
-        <div class="lang py-3 border-bottom">
-            <h6 class="text-mainColor">Language</h6>
-            <div class=" arabEng">
-                <div class=" mr-4">
-                    <img src="../../../assets/images/saudi-arabia.png" alt="">
-                    <span>Arabic</span>
+<section>
+    <div class="container">
+        <div class="row">
+          
+            <!-- LOGO -->
+            <div class="col-md-7 mx-auto">
+                <div class="img-nav text-center text-center">
+                    <img src="../../../assets/images/logo.png" class="w-25 rounded-circle" alt="">
                 </div>
+            </div>
+          
+            <!-- NavBar -->
+            <div class="col-md-12">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container">
 
-                <div class="">
-                    <img src="../../../assets/images/english-language.png" alt="">
-                    <span class="">English</span>
+                        <button class="navbar-toggler bg-mainColor" data-target="#my-nav" data-toggle="collapse"
+                            aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon text-light"> <i class="fas fa-bars"></i> </span>
+                        </button>
+
+                        <div id="my-nav" class="collapse navbar-collapse">
+                            <ul class="navbar-nav m-auto  ">
+                                <li class="nav-item ">
+                                    <a class="nav-link mr-2 " [routerLinkActive]="['active']"
+                                        [routerLink]="['home']">Home </a>
+
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link mr-2  " [routerLinkActive]="['active']"
+                                        [routerLink]="['trackorder']" tabindex="-1" aria-disabled="true">Track Order</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link mr-2 " [routerLinkActive]="['active']"
+                                        [routerLink]="['contactus']" tabindex="-1" aria-disabled="true">contact us</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link mr-2 " [routerLinkActive]="['active']" [routerLink]="['login']"
+                                        tabindex="-1" aria-disabled="true">Login</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a class="nav-link mr-2 " [routerLinkActive]="['active']" [routerLink]="['signup']"
+                                        tabindex="-1" aria-disabled="true">Signup</a>
+                                </li>
+
+                                <li class="nav-item ">
+                                    <a class="nav-link mr-2 " [routerLinkActive]="['active']"
+                                        [routerLink]="['Contract']">Contract </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="">
+                            <i class="fas fa-shopping-cart fa-2x "> </i>
+                            <span class="num-product"> 5 </span>
+                        </div>
+
+                    </div>
+                </nav>
+            </div>
+
+            <!-- language spinner -->
+            <div class="setting-spinner d-flex justify-align-center">
+                <div class="setting bg-light  rounded">
+                    <i (click)="showSpinnerSitting()" class="fas fa-cog fa-spin fa-2x text-mainColor "></i>
+                </div>
+                <div *ngIf="show" class=" bg-light border rounded px-3">
+                    <!-----------------------------languages----------------------->
+                    <div class="lang py-3 border-bottom">
+                        <h6 class="text-mainColor">Language</h6>
+                        <div class=" arabEng">
+                            <div class=" mr-4">
+                                <img src="../../../assets/images/saudi-arabia.png" alt="">
+                                <span>Arabic</span>
+                            </div>
+
+                            <div class="">
+                                <img src="../../../assets/images/english-language.png" alt="">
+                                <span class="">English</span>
+                            </div>
+                        </div>
+                    </div>
+                    <!-------------------mood-------------------------->
+
                 </div>
             </div>
         </div>
     </div>
-
-</div>
-
+</section>
